--- a/ExpressJS-Backend/package.json
+++ b/ExpressJS-Backend/package.json
@@ -10,9 +10,14 @@
   "author": "Wael Ibn Douma",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.2.0",
-    "nodemon": "^2.0.22"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
