--- a/next-front-end/package.json
+++ b/next-front-end/package.json
@@ -6,16 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.4",
+    "@headlessui/react": "^0.0.0-dev.0ce63d8",
+    "@heroicons/react": "v1",
     "@tailwindcss/forms": "^0.3.3",
     "next": "latest",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/node": "20.2.5",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
