--- a/next-front-end/package.json
+++ b/next-front-end/package.json
@@ -9,6 +9,8 @@
     "@headlessui/react": "^0.0.0-dev.0ce63d8",
     "@heroicons/react": "v1",
     "@tailwindcss/forms": "^0.3.3",
+    "autoprefixer": "10.4.5",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
@@ -17,8 +19,10 @@
   },
   "devDependencies": {
     "@types/node": "20.2.5",
-    "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
   }
 }
