--- a/next-front-end/package.json
+++ b/next-front-end/package.json
@@ -10,12 +10,15 @@
     "@heroicons/react": "v1",
     "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "10.4.5",
+    "axios": "^1.4.0",
+    "formik": "^2.4.1",
     "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
