implemented unit tests for auth controller

--- a/ExpressJS-Backend/.env
+++ b/ExpressJS-Backend/.env
@@ -1,3 +1,3 @@
 PORT = 8000
 MONGO_URI = mongodb+srv://waelacteol:58Ob3MZWhkjvauol@taskmanagement.evlb2ve.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET = Gxd@E4Rp^xu3$^&xaQJ^3Wgk((97MP!#
+JWT_SECRET = Gxd@E4Rp^xu3$^&xaQJ^3Wgk((97MP£!
