--- a/ExpressJS-Backend/package.json
+++ b/ExpressJS-Backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon appp.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Wael Ibn Douma",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
